--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           channel: beta
           version: latest
+      - name: Install dependencies
+        run: flutter pub get    
 
       - name: Enable web
         run: flutter config --enable-web
@@ -25,7 +27,7 @@ jobs:
         run: flutter pub get
 
       - name: Build web
-        run: flutter build web --release
+        run: flutter build web --release --enable-web
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
