--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           channel: beta
           version: latest
-          
+
       - name: Install dependencies
         run: flutter pub get    
 
@@ -28,7 +28,7 @@ jobs:
         run: flutter pub get
 
       - name: Build web
-        run: flutter build web --release
+        run: flutter build web --release --base-href="/Cultivator/"
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
