--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: web
+name: cultivator_web
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,6 +37,8 @@ dependencies:
   go_router: ^15.1.2
   flutter_animate: ^4.5.2
   url_launcher: ^6.3.1
+  url_launcher_web: ^2.4.1
+  web: ^1.1.1
 
 dev_dependencies:
   flutter_test:
