--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.3.1
   url_launcher_web: ^2.4.1
   web: ^1.1.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
