--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: flutter pub get
 
       - name: Build web
-        run: flutter build web --release --base-href=/
+        run: flutter build web --wasm --release --base-href=/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
