--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,14 @@
-name: cultivator_web
+name: onecultivator
 description: "A new Flutter project."
-
-version: 1.0.0+1
+publish_to: 'none'
+version: 0.1.0
 
 environment:
-  sdk: ^3.8.0-278.4.beta
+  sdk: ^3.10.0-75.1.beta
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
-  go_router: ^15.1.2
-  flutter_animate: ^4.5.2
-  url_launcher: ^6.3.1
-  url_launcher_web: ^2.4.1
-  web: ^1.1.1
-  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
